# mergenix

./: .dockerignore  .env.example  .env.rewrite.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .railwayignore  .vercelignore  AGENTS.md  AUTHENTICATION_RESEARCH.md  CLAUDE.md  Dockerfile.legacy  GOOGLE_OAUTH_SETUP.md  PROGRESS.md  Procfile  README.md  app.py  docker-compose.prod.yml  docker-compose.rewrite.yml  docker-compose.yml  eslint.config.js  nixpacks.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json  utils.py  vercel.json
.github/: copilot-instructions.md  dependabot.yml
.streamlit/: config.toml
apps/api/: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_02_10_0001_001_initial_schema.py  2026_02_10_0002_002_add_analysis_results.py  2026_02_10_0003_003_add_consent_and_cookie_preferences.py  2026_02_15_0004_004_add_data_version.py  2026_02_15_0005_005_drop_result_nonce_column.py  2026_02_15_0006_006_add_daily_event_counts.py  2026_02_16_0006_006_scrub_sensitive_summary_keys.py  2026_02_16_0006a_006a_scrub_sensitive_summary_keys.py  2026_02_16_0007_007_add_receipt_sent_and_unique_intent.py  2026_02_16_0008_008_add_deletion_token_columns.py  2026_02_16_0009_009_add_date_of_birth_to_users.py  2026_02_17_0010_010_consent_records_set_null_on_delete.py  2026_02_19_0011_011_add_composite_index_for_alert_servi.py  2026_02_20_0012_012_add_last_login_at_and_payment_set_null.py  2026_02_20_0012_012_add_marketing_enabled_to_cookie_prefs.py  2026_02_27_0013_014_encrypt_totp_secrets.py
apps/api/app/: __init__.py  config.py  database.py  encryption.py  main.py
apps/api/app/constants/: __init__.py  tiers.py
apps/api/app/middleware/: __init__.py  auth.py  rate_limit_headers.py  rate_limiter.py
apps/api/app/models/: __init__.py  analysis.py  analytics.py  audit.py  consent.py  payment.py  user.py
apps/api/app/routers/: __init__.py  admin.py  analysis.py  analytics.py  auth.py  clinvar.py  gdpr.py  health.py  legal.py  payments.py
apps/api/app/schemas/: __init__.py  analysis.py  analysis_types.py  analytics.py  auth.py  common.py  encryption.py  gdpr.py  legal.py  payment.py
apps/api/app/services/: __init__.py  account_service.py  alert_service.py  audit_service.py  auth_service.py  email_service.py  payment_service.py  retention_service.py
apps/api/app/templates/email/: base.html  deletion_confirmation.html  partner_notification.html  password_reset.html  purchase_receipt.html  security_alert.html  tier_upgrade.html  verification.html
apps/api/app/utils/: __init__.py  cookies.py  encryption.py  masking.py  request_helpers.py  security.py
apps/api/tests/: __init__.py  analysis_fixtures.py  conftest.py  fixtures.py  test_age_verification.py  test_alert_service.py  test_analysis.py  test_analysis_types.py  test_analytics.py  test_audit_analysis.py  test_auth.py  test_clinvar.py  test_config.py  test_data_version.py  test_email_templates.py  test_encryption.py  test_encryption_schema.py  test_gate2_fixes.py  test_gdpr.py  test_health.py  test_legal.py  test_main.py  test_middleware_auth.py  test_oauth_deletion.py  test_payments.py  test_rate_limiting.py  test_retention.py  test_retention_l6.py  test_secret_rotation.py  test_tier_constants.py  test_webhook.py
(+701 files in other folders)
