[project]
name = "tortit"
version = "2.0.0"
description = "Genetic Offspring Analysis Platform"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["Source", "pages", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (fine in tests)
    "S105",   # hardcoded password (false positives in test data)
    "S106",   # hardcoded password (false positives in test data)
    "B008",   # function call in default argument (streamlit pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"scripts/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
